# infotecs_internship

./: CMakeLists.txt  README.md
C++/: CMakeLists.txt
C++/client/include/: client.h
C++/lib/include/: infotecs_internship.h
C++/lib/src/: infotecs_internship.cpp
C++/server/include/: server.h
C++/server/src/: main.cpp  server.cpp
client/: client.cpp
client/src/: client.cpp  main.cpp
java/: README.md  client_guide.txt  dependency-reduced-pom.xml  pom.xml
java/resources/: config.properties
java/src/main/java/org/example/: ClientSFTP.java  ConfigLoader.java  Main.java  MenuKeys.java  MenuLoader.java  ParserJSON.java
java/src/main/resources/: config.properties  domains.json
java/test/: README.md  dependency-reduced-pom.xml  pom.xml  test.xml
java/test/scripts/: README.md  invalid_IP_list.exp  invalid_domain_list.exp  prepairing_tests.sh  run_tests.sh  test_add_pair.exp  test_add_pair_negative.exp  test_config_editor.exp  test_config_editor_negative.exp  test_delete_pair_IP.exp  test_delete_pair_domain.exp  test_delete_pair_negative.exp  test_get_IP.exp  test_get_IP_negative.exp  test_get_domain.exp  test_get_domain_negative.exp  test_print_list.exp  test_print_list_exist.exp  utils.exp
java/test/src/main/java/org/example/: Main.java
lib/include/: infotecs_internship.h
lib/src/: infotecs_internship.cpp
server/: server.cpp
